fix layout overflow

--- a/client/src_embed/Embed.css
+++ b/client/src_embed/Embed.css
@@ -1,7 +1,7 @@
 #main {
   display: flex;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   flex-direction: column;
   border-radius: 5px;
   border: solid 1px #ddd;
